winrt: Do not try to delete nullptr worker

When calling QBluetoothDeviceDiscoveryAgentPrivate::stop the worker
pointer is cleared in disconnectAndClearWorker so there is no need
to call deleteLater (which will just result in a warning).

Change-Id: I2713474833b61a12018ecfa6f9eb11618ed025a7
Task-number: QTBUG-75089
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>